--- a/css/style.css
+++ b/css/style.css
@@ -2095,12 +2095,16 @@ body {
             align-items: center;
   }
   .center-adress {
+    max-width: 20%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .center-adress img {
+    margin-right: 10px;
   }
   .choose-city {
     width: auto;
@@ -2152,6 +2156,7 @@ body {
   }
   .best-service-center .text-content {
     margin: 0px 10px 0 0;
+    max-width: 46%;
   }
   .best-service-center .text-content p {
     margin-bottom: 10px;
@@ -2176,8 +2181,26 @@ body {
   .service-description h2 {
     bottom: 0;
   }
+  .service-description .text-block {
+    max-width: 45%;
+  }
   .service-description .container-fluid:nth-of-type(2) {
     padding: 0;
+  }
+  .service-description .container-fluid:nth-of-type(2) img {
+    margin-right: 20px;
+    max-width: 45%;
+  }
+  .service-description .container-fluid:nth-of-type(2) .content {
+    width: 100%;
+  }
+  .footer .container-fluid:nth-of-type(1) .content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer .container-fluid:nth-of-type(2) .content {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
