--- a/scss/adaptive.scss
+++ b/scss/adaptive.scss
@@ -25,8 +25,13 @@
   }
 
   .center-adress {
+    max-width  : 20%;
     display    : flex;
     align-items: center;
+
+    img {
+      margin-right: 10px;
+    }
   }
 
   .choose-city {
@@ -86,6 +91,7 @@
 
     .text-content {
       margin: 0px 10px 0 0;
+      max-width: 46%;
 
       p {
         margin-bottom: 10px;
@@ -95,7 +101,7 @@
 
   .what-repair {
 
-    padding-top: 50px;
+    padding-top   : 50px;
     padding-bottom: 150px;
 
     .container-fluid {
@@ -103,13 +109,13 @@
     }
 
     .content {
-      max-width: unset;
+      max-width      : unset;
       justify-content: space-between;
     }
   }
 
   .devices-group,
-  .devices-grid  {
+  .devices-grid {
     width: 50%;
   }
 
@@ -118,14 +124,34 @@
   }
 
   .service-description {
+    .text-block {
+      max-width: 45%;
+    }
+
     .container-fluid {
       &:nth-of-type(2) {
         padding: 0;
 
         img {
-          margin: 0;
+          margin-right: 20px;
+          max-width: 45%;
         }
 
+        .content {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .footer {
+    .container-fluid {
+      &:nth-of-type(1) {
+        .content {
+          align-items: center;
+        }
+      }
+      &:nth-of-type(2) {
         .content {
           width: 100%;
         }
