--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,6 +178,10 @@ body {
   }
 }
 
+.search-button {
+  display: none;
+}
+
 .phone-and-worktime {
   margin        : 0 26px 0 26px;
   vertical-align: bottom;
