--- a/scss/adaptive.scss
+++ b/scss/adaptive.scss
@@ -90,7 +90,7 @@
     padding-top: 80px;
 
     .text-content {
-      margin: 0px 10px 0 0;
+      margin   : 0px 10px 0 0;
       max-width: 46%;
 
       p {
@@ -134,7 +134,7 @@
 
         img {
           margin-right: 20px;
-          max-width: 45%;
+          max-width   : 45%;
         }
 
         .content {
@@ -151,6 +151,7 @@
           align-items: center;
         }
       }
+
       &:nth-of-type(2) {
         .content {
           width: 100%;
@@ -159,4 +160,94 @@
     }
   }
 
+}
+
+@media (max-width: 1159px) {
+  .devices-list {
+    a {
+      font-size: 13px;
+    }
+  }
+}
+
+@media (max-width: 1129px) {
+
+  .search {
+    display: none;
+  }
+
+  .search-button {
+    width     : 40px;
+    background: transparent;
+    border    : 0;
+    outline   : none;
+    margin    : 15px 0 15px 0;
+    display   : inline-block;
+
+    svg {
+      width: 100%;
+    }
+  }
+
+  .close {
+    float: none;
+  }
+
+  .phone-and-worktime {
+    display    : flex;
+    align-items: center;
+  }
+
+  .phone {
+    margin-right: 4vw;
+  }
+
+  .search-dropdown {
+    padding: 20px;
+    width: 100%;
+  }
+
+  .dropdown-search-form {
+    margin-bottom: 50px;
+
+    input {
+      font-family: "PT Sans Caption", sans-serif;
+      width        : 97%;
+      height       : 40px;
+      border-radius: 2px;
+      border       : 1px solid #bbb5b5;
+      padding      : 0 10px;
+    }
+  }
+
+  .devices-row {
+    display: none;
+  }
+
+  .devices-links {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+
+    div {
+      background   : lightgrey;
+      border-radius: 9px;
+      padding      : 4px 10px 4px;
+      display      : flex;
+      align-items  : center;
+    }
+
+    img {
+      margin-right: 10px;
+    }
+
+    a {
+      color: black;
+      font-family: "PT Sans Caption", sans-serif;
+    }
+  }
+
+  .footer-search-row {
+    display: none;
+  }
 }
